--- a/projects/angular-weekday-course-calendar/src/lib/angular-weekday-course-calendar.component.html
+++ b/projects/angular-weekday-course-calendar/src/lib/angular-weekday-course-calendar.component.html
@@ -4,7 +4,7 @@
     <div class="header">
 
       <div class="header-items" style="grid-template-columns: repeat({{this.disableSunday ? 6 : 7}},minmax(0,1fr));">
-        <div class="header-item" *ngFor="let gridItem of calendarDataBuilder.getCalendarGrid().header">
+        <div class="header-item" *ngFor="let gridItem of calendarDataBuilder?.getCalendarGrid()?.header">
           {{gridItem.displayContent ? gridItem.content : ''}}
 
         </div>
@@ -14,7 +14,7 @@
 
     <div class="times">
       <div class="times-items">
-        <div class="time-item" *ngFor="let gridItem of calendarDataBuilder.getCalendarGrid().times">
+        <div class="time-item" *ngFor="let gridItem of calendarDataBuilder?.getCalendarGrid()?.times">
           {{gridItem.displayContent ? gridItem.content : ''}}
         </div>
       </div>
@@ -23,7 +23,7 @@
 
     <div class="spacers">
       <div class="spacer-columns" style="grid-template-columns: repeat({{this.disableSunday ? 6 : 7}},minmax(0,1fr));">
-        <div class="spacer-column"  *ngFor="let spacer of calendarDataBuilder.getCalendarGrid().spacers">
+        <div class="spacer-column"  *ngFor="let spacer of calendarDataBuilder?.getCalendarGrid()?.spacers">
           <div class="spacer-row"  *ngFor="let gridItem of spacer">
 
           </div>
@@ -33,7 +33,7 @@
 
     <!--    <div class="five-minutes">-->
     <!--      <div class="five-minutes-grid" style="grid-template-columns: repeat({{this.disableSunday ? 6 : 7}},minmax(0,1fr));">-->
-    <!--        <div class="five-minutes-column" *ngFor="let spacer of calendarDataBuilder.getCalendarGrid().spacers">-->
+    <!--        <div class="five-minutes-column" *ngFor="let spacer of calendarDataBuilder?.getCalendarGrid()?.spacers">-->
     <!--          <div class="five-minutes-row" *ngFor="let minutes of [].constructor(12 * spacer.length);">-->
 
     <!--          </div>-->
@@ -44,7 +44,7 @@
 
     <div class="courses">
       <div class="courses-grid" style="grid-template-columns: repeat({{this.disableSunday ? 6 : 7}},minmax(0,1fr));">
-        <div class="courses-column" style="grid-template-rows: repeat({{12 * spacer.length}},{{fiveMinutesHeight}});" *ngFor="let spacer of calendarDataBuilder.getCalendarGrid().spacers; let index = index">
+        <div class="courses-column" style="grid-template-rows: repeat({{12 * spacer.length}},{{fiveMinutesHeight}});" *ngFor="let spacer of calendarDataBuilder?.getCalendarGrid()?.spacers; let index = index">
 
 
           <div class="course-item" style="grid-row: {{courseGridItem.gridrowStart}}/{{courseGridItem.gridrowEnd}}" *ngFor="let courseGridItem of getCoursesForWochentag(index)">
